force-app/main/default/objects/Order__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery</label>
    <referenceTo>Delivery__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>